Add source for GitHub Corners

--- a/scripts/docs-generator/templates/index.ejs
+++ b/scripts/docs-generator/templates/index.ejs
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div class="min-vh-100 d-flex flex-column p-1 font-monospace bg-light">
+      <!-- GitHub Corners: https://github.com/tholman/github-corners -->
       <div id="github-corner">
         <a
           href="https://github.com/alvitoraidhy/pluggers"
